Added Google Search Console verification

--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+    <meta name="google-site-verification" content="R7VsOSQj1xaHDBobFkmVAB7SVcserkaoy8vIPR90rWw" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>umesh-portfolio</title>
+    <title>Shree Krishna Construction Company | Mining & Infrastructure</title>
+
+<meta
+  name="description"
+  content="Shree Krishna Construction Company owned by Mr Subodh Yadav and Mr Bhoop Singh. We provide mining, construction, and heavy machinery services."
+/>
+
+<meta
+  name="keywords"
+  content="Shree Krishna Construction Company, mining company, construction company, Subodh Yadav, Bhoop Singh"
+/>
+
+<meta name="robots" content="index, follow" />
+
+<link rel="canonical" href="https://subodh-342z.vercel.app/" />
+</title>
   </head>
   <body>
     <div id="root"></div>
